# BioMetNet

./: .gitignore  README.md  pyproject.toml
cloud/: deploy.sh  run_pipeline.sh  setup_pod.sh  sync_results.sh
scripts/: build_carveme_models.py  download_bigg.py  evaluate.py  generate_toy_data.py  predict.py  prepare_data.py  prepare_ecoli_data.py  prepare_multi_organism.py  train.py
src/biometnet/: __init__.py
src/biometnet/data/: bigg_loader.py  dataset.py  ecoli_data.py  gff_parser.py  metabolic_vocab.py  multi_organism.py  ncbi_carveme.py  strain_data.py  toy_data.py
src/biometnet/evaluation/: metrics.py
src/biometnet/model/: classifier.py  decoder.py  encoder.py  feature_encoder.py  multi_org_classifier.py  seq2seq.py  strain_classifier.py
src/biometnet/training/: config.py  trainer.py
tests/: test_classifier.py  test_model.py  test_toy_data.py  test_training.py  test_vocab.py
