[project]
name = "biometnet"
version = "0.1.0"
description = "Genome-to-Metabolism Neural Mapping for bacterial systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "cobra>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
carveme = [
    "carveme>=1.6",
    "pyscipopt>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biometnet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
